finished html/css challenges and added folders

--- a/frontend/html-project/book2.html
+++ b/frontend/html-project/book2.html
@@ -9,12 +9,13 @@
   
   <body>
   <div class="index-container">
-    <p><a href ="../index.html">
+    <p><a href ="index.html">
       <button class ="homebtn">Home</button></a></p>
+      <div class="container2">
+      <div class ="item item1">
     <h2>A Brief Tour of Higher Consciousness</h2>
     <p>
       <br>
-      <img src="book2.jpg" width="100px" height="auto" alt="an image of the book A Brief Tour of Higher Consciousness"/>
       <ol>
       <li>Sound Waves and Vibrations</li>
       <li>A Look Throught the Supermicroscope</li>
@@ -27,6 +28,10 @@
       <li>The "How to" of Intuitive Knowledge</li>
       <li>Some Reflections on the Creator</li>
     </ol></p>
+      </div>
+      <div class="item item5"><img src="book2.jpg" width="140px" height="auto" 
+        alt="an image of the book A Brief Tour of Higher Consciousness"/></div>
+  </div>
   </div>
   </body>
 </html>
