--- a/frontend/html-project/index.html
+++ b/frontend/html-project/index.html
@@ -9,10 +9,13 @@
   
   <body>
   <div class="index-container">
+    <div class="container">
+      <div class ="item item1">
     <h1>Itzhak Bentov</h1>
     <br>
     <h2>Profile</h2>
-    <p>Itzhak Bentov was an eccentric mystic, inventor and an author/researcher on adventurous subjects such as metaphysics,
+    <p><a href="https://en.wikipedia.org/wiki/Itzhak_Bentov">Itzhak Bentov</a> was an eccentric mystic, inventor and an author/researcher on 
+      adventurous subjects such as metaphysics,
       physics, biology and spirituality. His research has <a href="https://www.cia.gov/readingroom/docs/CIA-RDP96-00788R001700210016-5.pdf">
         invited the attention of the CIA</a> in the 60's and 70's. The CIA has
       utlized his findings in their reseach into psychic phenomena and universal cosmology. He was spearheading discussions
@@ -28,10 +31,15 @@
       <li><a href="book2.html">A Brief Tour of Higher Consciousness</a></li>
       <li><a href="https://www.cia.gov/readingroom/docs/CIA-RDP96-00788R001700210016-5.pdf">(Referenced on) 
         The CIA's Analysis and Assessment of Gateway Process</a></li>
-      <li>Invented the steerable heart catheter</li>
+      <li>Patented numerous inventions including the steerable heart catheter and diet spaghetti</li>
     </ul></p>
-    <br>
-    <h2>Stalking the Wild Pendulum Chapters</h2>
+    </div>
+    <div class="item item2">
+      <img src="bentov.jpg" width="180px" height="auto" alt="an image of Itzhak Bentov"/>
+      <p><a href="https://www.youtube.com/watch?v=KMbeK_6ATxQ&t=6s">Link to his 1978 TV interview</a></p>
+    </div>
+    <div class ="item item4">
+    <h2>Stalking the Wild Pendulum</h2>
     <p>This is one of my favourite books. The author combines complex topics on physics, biology, spirituality and cosmology
       all in one working model of the universe. It sounds like an intimidating read but the author uses His
       wonderful sense of humour paired with his childishly charming drawing to make the content easily digestible to 
@@ -50,8 +58,12 @@
       <li>The "How to" of Intuitive Knowledge</li>
       <li>Some Reflections on the Creator</li>
     </ol>
-        <img src="book.jpg" width="60px" height="auto" alt=""an image of the book Stalking the Wild Pendulum/>
+  </div>
+  <div class="item item3">
+        <a href="https://www.goodreads.com/en/book/show/376895"><img src="book.jpg" width="180px" height="auto" 
+          alt="an image of the book Stalking the Wild Pendulum"/></a>
   </p>
+    </div>
   </div>
   </body>
 </html>
